# imgs2gif

./: README.md  pyproject.toml
src/sticker_demo/: main.py
